fix for PageFooter visibility

--- a/src/components/PageFooter.css
+++ b/src/components/PageFooter.css
@@ -11,6 +11,7 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 .page-footer .e-link-container ion-icon {
